applied my security patch

--- a/eggdrop.simple.conf
+++ b/eggdrop.simple.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.simple.conf,v 1.13 2001/11/10 02:11:09 guppy Exp $
+# $Id: eggdrop.simple.conf,v 1.14 2001/11/29 23:25:36 guppy Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
 # want to edit this, to set up your bot.  Right now, it creates a bot called
@@ -77,7 +77,7 @@ set net-type 0
 listen 3333 all
 # set here the port where eggdrop should listen von telnet connections
 
-set owner "MrLame, MrsLame"
+#set owner "MrLame, MrsLame"
 # set here the list of owners of the bot
 
 
