--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.complete.conf,v 1.39 2001/11/28 23:26:05 guppy Exp $
+# $Id: eggdrop.complete.conf,v 1.40 2001/11/29 23:25:36 guppy Exp $
 #
 # This config file includes all possible options you can
 # use to configure your bot properly.
@@ -290,9 +290,9 @@ set ignore-time 15
 # this now includes when the bot will save its userfile
 set hourly-updates 00
 
-# if compiled with owner, the following user(s) will ALWAYS have the
-# owner (+n) flag (You really should change this default)
-set owner "MrLame, MrsLame"
+# the following user(s) will ALWAYS have the owner (+n) flag (You really 
+# should change this default value)
+#set owner "MrLame, MrsLame"
 
 # who should I send a note to when I learn new users?
 set notify-newusers "$owner"
@@ -341,7 +341,7 @@ unbind dcc n set *dcc:set
 # [0/1/2] only let permanent owners use .tcl/.set if bound? then set it to 1
 # moreover only let permanent owners use .dump? then set it to 2
 # (the people must set the $owner variable)
-set must-be-owner 0
+set must-be-owner 1
 
 # comment the following line out to add the 'simul' command (owners can
 # manipulate other people on the party line).
